--- a/theme-overrides/partials/footer.html
+++ b/theme-overrides/partials/footer.html
@@ -1,5 +1,5 @@
 <!--
-  Copyright (c) 2016-2020 Martin Donath <martin.donath@squidfunk.com>
+  Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
 
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to
@@ -22,49 +22,58 @@
 
 {% import "partials/language.html" as lang with context %}
 
-<!-- Application footer -->
+<!-- Footer -->
 <footer class="md-footer">
 
   <!-- Link to previous and/or next page -->
   {% if page.previous_page or page.next_page %}
-  <div class="md-footer-nav">
-    <nav class="md-footer-nav__inner md-grid" aria-label="{{ lang.t('footer.title') }}">
+    <nav
+      class="md-footer__inner md-grid"
+      aria-label="{{ lang.t('footer.title') }}"
+    >
 
       <!-- Link to previous page -->
       {% if page.previous_page %}
-      <a href="{{ page.previous_page.url | url }}" class="md-footer-nav__link md-footer-nav__link--prev" rel="prev">
-        <div class="md-footer-nav__button md-icon">
-          {% include ".icons/material/arrow-left.svg" %}
-        </div>
-        <div class="md-footer-nav__title">
-          <div class="md-ellipsis">
-            <span class="md-footer-nav__direction">
-              {{ lang.t("footer.previous") }}
-            </span>
-            {{ page.previous_page.title }}
+        <a
+          href="{{ page.previous_page.url | url }}"
+          class="md-footer__link md-footer__link--prev"
+          rel="prev"
+        >
+          <div class="md-footer__button md-icon">
+            {% include ".icons/material/arrow-left.svg" %}
           </div>
-        </div>
-      </a>
+          <div class="md-footer__title">
+            <div class="md-ellipsis">
+              <span class="md-footer__direction">
+                {{ lang.t("footer.previous") }}
+              </span>
+              {{ page.previous_page.title }}
+            </div>
+          </div>
+        </a>
       {% endif %}
 
       <!-- Link to next page -->
       {% if page.next_page %}
-      <a href="{{ page.next_page.url | url }}" class="md-footer-nav__link md-footer-nav__link--next" rel="next">
-        <div class="md-footer-nav__title">
-          <div class="md-ellipsis">
-            <span class="md-footer-nav__direction">
-              {{ lang.t("footer.next") }}
-            </span>
-            {{ page.next_page.title }}
+        <a
+          href="{{ page.next_page.url | url }}"
+          class="md-footer__link md-footer__link--next"
+          rel="next"
+        >
+          <div class="md-footer__title">
+            <div class="md-ellipsis">
+              <span class="md-footer__direction">
+                {{ lang.t("footer.next") }}
+              </span>
+              {{ page.next_page.title }}
+            </div>
           </div>
-        </div>
-        <div class="md-footer-nav__button md-icon">
-          {% include ".icons/material/arrow-right.svg" %}
-        </div>
-      </a>
+          <div class="md-footer__button md-icon">
+            {% include ".icons/material/arrow-right.svg" %}
+          </div>
+        </a>
       {% endif %}
     </nav>
-  </div>
   {% endif %}
 
   <!-- Further information -->
@@ -74,9 +83,9 @@
       <!-- Copyright and theme information -->
       <div class="md-footer-copyright">
         {% if config.copyright %}
-        <div class="md-footer-copyright__highlight">
-          {{ config.copyright }}
-        </div>
+          <div class="md-footer-copyright__highlight">
+            {{ config.copyright }}
+          </div>
         {% endif %}
       </div>
 
